footer semi-fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/_css/style.css">
-    <title>Document</title>
+    <title>APS Emergia</title>
 </head>
 <body>
     <!-- Header -->
@@ -192,11 +192,11 @@
                         <div class="footer-section">
                             <h3>Integrantes</h3>
                             <ul class="footer-links">
-                                <li><a>Felipe Matias Maximiano da Silva</a></li>
-                                <li><a>Henrique Nascimento de Souza</a></li>
-                                <li><a>Giovanna Alcantara do Nascimento</a></li>
-                                <li><a>Kauan Eron Carneiro Araujo</a></li>
-                                <li><a>Matheus de Souza Lima Costa</a></li>
+                                <li><p>Felipe Matias Maximiano da Silva</p></li>
+                                <li><p>Henrique Nascimento de Souza</p></li>
+                                <li><p>Giovanna Alcantara do Nascimento</p></li>
+                                <li><p>Kauan Eron Carneiro Araujo</p></li>
+                                <li><p>Matheus de Souza Lima Costa</p></li>
                             </ul>
                         </div>
                     </div>
@@ -205,10 +205,9 @@
                             <h3>Links Rápidos</h3>
                             <ul class="footer-links">
                                 <li><a href="#">Início</a></li>
-                                <li><a href="#"></a></li>
                                 <li><a href="#">Como Funciona</a></li>
-                                <li><a href="#">Kauan Eron Carneiro Araujo</a></li>
-                                <li><a href="#">Matheus de Souza Lima Costa</a></li>
+                                <li><a href="#">Tópico 1</a></li>
+                                <li><a href="#">Tópico 2</a></li>
                             </ul>
                         </div>
                         <div class="footer-section">
