--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         <div class="header-container">
             <nav>
                 <a class="titulo">Emergia</a>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
                 <ul class="nav-list">
                     <li><a href="#">Início</a></li>
-                    <li><a href="#conceito">Conceito</a></li>
+                    <li><a href="#">Conceito</a></li>
                     <li><a href="#">Aplicação</a></li>
                 </ul>
             </nav>
@@ -34,7 +39,7 @@
                     <li><a href="#por-que-usar" class="a-style2">Por Que Usar a Emergia?</a></li>
                     <li><a href="#como-calcular" class="a-style2">Como Calcular a Emergia</a></li>
                     <li><a href="#aplicacoes" class="a-style2">Aplicações da Emergia
-</a></li>
+                    </a></li>
                 </ul>
             </aside>
             <main>
@@ -186,7 +191,7 @@
             </main>
         </section>
         <footer class="footer">
-            <div class="footer-container">
+            <section class="footer-container">
                 <div class="footer-content">
                     <div class="footer-integrantes">
                         <div class="footer-section">
@@ -211,7 +216,7 @@
                             </ul>
                         </div>
                         <div class="footer-section">
-                            <h3>Integrantes</h3>
+                            <h3>Contato</h3>
                             <ul class="footer-links">
                                 <li><a href="#">a</a></li>
                                 <li><a href="#">a</a></li>
@@ -221,9 +226,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </footer>
     </div>
 </body>
+    <script src="/_js/mobile-navbar.js"></script>
     <script src="/_js/script.js"></script>
 </html>
