--- a/_pages/campus.html
+++ b/_pages/campus.html
@@ -19,8 +19,8 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="/index.html">Início</a></li>
-                    <li><a href="/_pages/home.html">Conceito</a></li>
-                    <li><a href="#">Aplicação</a></li>
+                    <li><a href="/_pages/emergia.html">Conceito</a></li>
+                    <li><a href="/_pages/campus.html">UNIP</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,27 +35,181 @@
                     <h3>Neste Artigo</h3>
                 </header>
                 <ul class="navlateral-list">
-                    <li><a href="#conceito" class="a-style2">O Que É Emergia</a></li>
-                    <li><a href="#por-que-usar" class="a-style2">Por Que Usar a Emergia?</a></li>
-                    <li><a href="#como-calcular" class="a-style2">Como Calcular a Emergia</a></li>
-                    <li><a href="#aplicacoes" class="a-style2">Aplicações da Emergia
+                    <li><a href="#emergia-unip" class="a-style2">Emergia no Campus UNIP</a></li>
+                    <li><a href="#como-aplicar" class="a-style2">Como Aplicar no Campus?</a></li>
                     </a></li>
                 </ul>
             </aside>
             <main>
                 <article class="topicos">
-                    <h2 class="titulo-section" id="conceito">O Que É Emergia?</h1> <hr>
-                    <div class=""></div>
-                    <p>A <b>Emergia</b> é um conceito criado pelo ecólogo americano Howard T. Odum para medir toda a energia necessária para gerar um produto ou serviço, incluindo a energia natural e humana. Ela vai além da energia visível, como eletricidade ou combustível. A emergia considera: A luz do sol que alimenta as plantas, a água da chuva que irriga as lavouras, o solo fértil que sustenta o cultivo, o tempo e o esforço humano, as máquinas, os fertilizantes, o transporte, etc. Tudo isso é somado e convertido em emjoules solares (sej) – uma unidade comum baseada na energia do sol, pois é a fonte de energia primária de todos os sistemas da Terra.
+                    <h2 class="titulo-section" id="emergia-unip">Emergia no Campus UNIP</h1> <hr>
+                    <p>Você sabia que é possível medir toda a energia, visível e invisível, envolvida nas atividades diárias do campus? Desde o preparo de um almoço no refeitório até o funcionamento das salas de aula, tudo consome recursos naturais. A emergia nos ajuda a identificar oportunidades de melhoria e promover ações mais sustentáveis dentro do campus. <br>
+                    A transição para uma universidade mais ecológica passa pelo uso consciente dos recursos e pela mensuração eficiente do impacto ambiental das suas operações. Uma das formas mais robustas de fazer isso é através da <strong>avaliação de emergia</strong>, um método desenvolvido por <strong>Howard T. Odum</strong>, que calcula o custo energético total de qualquer sistema, considerando tanto os insumos visíveis (como eletricidade) quanto os invisíveis (como esforço humano, materiais e energia da natureza).
                     </p>
+                    <h3>Eficiência Energética</h3><hr>
+                    <p>No campo da eficiência energética, a emergia ajuda a identificar pontos críticos de consumo, inclusive aqueles que não aparecem diretamente na conta de luz, como o esforço energético para produzir, transportar e manter equipamentos em funcionamento. Por exemplo, ao comparar duas salas de aula ou dois laboratórios, pode-se observar qual deles exige mais energia da natureza e da sociedade para operar. Com essas informações, torna-se possível otimizar o uso de equipamentos, melhorar o aproveitamento da luz natural e direcionar investimentos para soluções com maior retorno emergético, como sistemas de energia solar ou ventilação passiva.</p>
+
+                    <h3>Gestão de Resíduos</h3><hr>
+                    <p>Neste caso, a emergia permite mensurar o desperdício energético associado aos materiais descartados. Cada quilo de alimento jogado fora, cada copo plástico descartável ou folha de papel inutilizada representa energia solar indireta desperdiçada. Ao calcular essa energia “perdida”, a universidade pode repensar seus fluxos de descarte, adotar práticas como compostagem, reciclagem e reaproveitamento de materiais com base em dados concretos, e estabelecer metas de redução alinhadas com indicadores emergéticos.</p>
+                    <h3>Impacto Ambiental</h3><hr>
+                    <p>Quanto à redução do impacto ambiental, a emergia atua como um parâmetro objetivo para avaliar práticas, produtos e decisões administrativas. Ela pode ser usada para comparar a sustentabilidade de diferentes fornecedores, avaliar o custo energético de reformas ou construções no campus, ou mesmo planejar eventos com menor pegada ecológica. Isso permite que as escolhas feitas no campus deixem de se basear apenas em preço ou conveniência, e passem a considerar o custo energético total para o meio ambiente.</p>
                 </article>
 
                 <article class="topicos">
-                    <h2 class="titulo-section" id="por-que-usar">Por Que Usar a Emergia?</h1> <hr>
-                    <p>A emergia serve como uma lupa energética. Ela nos ajuda a revelar o impacto ambiental real de um produto,comparar sistemas de produção, como o cultivo orgânico e convencional, avaliar a sustentabilidade de tecnologias, guiar decisões conscientes em agricultura, indústria, energia e planejamento urbano.</p>
-                    <h3 class="titulo-subsection">Exemplo:</h3>
-                    <p>Dois tomates podem parecer iguais, mas um pode ter usado mais fertilizante, mais diesel e mais irrigação. A emergia mostra qual deles custou mais energia da natureza para ser produzido.</p>
+                    <h2 class="titulo-section" id="como-aplicar">Como Aplicar no Campus?</h2> <hr>
+                    <p>Este plano propõe a aplicação da emergia para tornar mais sustentável o uso de iluminação noturna no Campus, promovendo economia de energia e reduzindo a pegada ecológica da universidade de forma mensurável e planejada. <br><strong>Objetivos:</strong>
+                    <p class="lista">
+                        - Reduzir o consumo de energia elétrica durante o período noturno no campus. <br>
+                        - Substituir e reconfigurar os sistemas de iluminação baseados em critérios de emergia. <br>
+                        - Promover uma cultura institucional voltada à eficiência energética e sustentabilidade. <br>
+                        - Criar um modelo replicável para outros campus ou instituições.</p>
+                    </p>
+                    <h3>Diagnóstico Inicial: Levantamento e Mapeamento</h3><hr>
+                    <p><strong>1. </strong>Mapeamento completo do sistema de iluminação atual:<br>
+                    <p class="lista">
+                        - Número de luminárias por área (pátios, estacionamentos, corredores externos, etc.) <br>
+                        - Tipo de lâmpada utilizada (ex: LED antigo, fluorescente) <br>
+                        - Potência média por lâmpada <br>
+                        - Horas de funcionamento por noite (ex: 12h) <br>
+                        - Consumo mensal estimado</p>
+                    </p>
+
+                    <p><strong>2. </strong>Levantamento dos dados de emergia associados:<br> </p>
+                    <p class="lista">
+                        - Energia elétrica consumida por mês (kWh x transformidade) <br>
+                        - Emergía incorporada dos equipamentos (produção, transporte, manutenção) <br>
+                        - Emergía associada à mão de obra de manutenção <br>
+                        - Emergía das perdas por ineficiência (lâmpadas mal posicionadas ou acesas sem necessidade) <br>
+                    </p>
+
+                    <h3>Cálculo Comparativo de Emergía – Sistema Atual vs Proposto</h3><hr>
+                    <h3>Sistema Atual (Iluminação de Vapor Metálico) – Exemplo Prático:</h3>
+
+                    <div class="table-responsive">
+                    <table>
+                        <tr>
+                            <th>Item</th>
+                            <th>Quantidade</th>
+                            <th>Transformidade</th>
+                            <th>Emergia (sej)</th>
+                        </tr>
+                        <tr>
+                            <td>Eletricidade (250W x 12h)</td>
+                            <td>90 kWh/mês/lâmpada</td>
+                            <td>2.000.000 sej/kWh</td>
+                            <td>180.000.000</td>
+                        </tr>
+                        <tr>
+                            <td>Lâmpada de vapor metálico</td>
+                            <td>1 unidade</td>
+                            <td>1.000.000.000 sej</td>
+                            <td>1.000.000.000</td>
+                        </tr>
+                        <tr>
+                            <td>Manutenção (2h por mês)</td>
+                            <td>2 h</td>
+                            <td>2.500.000 sej/h</td>
+                            <td>5.000.000</td>
+                        </tr>
+                        <tr>
+                            <td>Total por luminária/mês</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>1.185.000.000 sej</td>
+                        </tr>
+                    </table>
+                    </div>
+
+                    <h3>Sistema Proposto (LED de Alta Eficiência com Sensor)</h3>
+
+                    <div class="table-responsive">
+                    <table>
+                        <tr>
+                            <th>Item</th>
+                            <th>Quantidade</th>
+                            <th>Transformidade</th>
+                            <th>Emergia (sej)</th>
+                        </tr>
+                        <tr>
+                            <td>Eletricidade (100W x 5h)</td>
+                            <td>15 kWh/mês/lâmpada</td>
+                            <td>2.000.000 sej/kWh</td>
+                            <td>30.000.000</td>
+                        </tr>
+                        <tr>
+                            <td>Luminária LED + sensor</td>
+                            <td>1 unidade</td>
+                            <td>1.500.000.000 sej</td>
+                            <td>1.500.000.000</td>
+                        </tr>
+                        <tr>
+                            <td>Manutenção (2h por mês)</td>
+                            <td>0,5 h</td>
+                            <td>2.500.000 sej/h</td>
+                            <td>1.250.000</td>
+                        </tr>
+                        <tr>
+                            <td>Total por luminária/mês</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>1.531.250.000  sej</td>
+                        </tr>
+                    </table>
+                    </div>
+
+                    <p><strong>Observação:</strong> Apesar do LED ter emergia de fabricação maior, seu ciclo de vida é 5 a 10x maior e o consumo mensal menor, com isso a emergia total mensal cai drasticamente.</p>
+
+                    <h3>Redução do Consumo Noturno - Plano de Ação</h3><hr>
+                    <h3>Fase 1: Substituição Tecnológica (mês 1-3)</h3>
+                    <p class="lista">Trocar todas as luminárias externas por modelos LED de 100W com sensores de presença e fotocélula. <br>
+                    Instalar refletores inteligentes em áreas de grande movimento, com acionamento temporizado.</p>
+
+                    <h3>Fase 2: Otimização de Horários (mês 3-4)</h3>
+                    <p class="lista">Criar cronogramas automáticos para desligamento progressivo da iluminação onde não há movimento noturno (ex: quadras, jardins). <br>
+                    Dividir o campus em zonas com níveis distintos de iluminação conforme o uso.</p>
+
+                    <h3>Fase 3: Monitoramento e Gestão Inteligente (mês 5-6)</h3>
+                    <p class="lista">Instalar sensores e sistemas IoT para registrar consumo em tempo real. <br>
+                    Desenvolver dashboards de controle para manutenção preventiva e monitoramento de eficiência energética.</p>
+
+                    <h3>Fase 4: Educação e Engajamento (contínuo)</h3>
+                    <p class="lista">Campanhas visuais no campus sobre economia de luz e emergia. <br>
+                    Inserção do conceito de emergia em disciplinas, palestras e semanas acadêmicas. <br>
+                    Criação de um laboratório de “Energia Inteligente” para estudo e aprimoramento do projeto.</p>
+
+                    <h3>Resultados Esperados</h3><hr>
+                    
+                    <div class="table-responsive">
+                    <table>
+                        <tr>
+                            <th>Indicador</th>
+                            <th>Antes</th>
+                            <th>Após 6 meses</th>
+                        </tr>
+                        <tr>
+                            <td>Consumo de energia noturna</td>
+                            <td>100.000 kWh/mês</td>
+                            <td>35.000 kWh/mês</td>
+                        </tr>
+                        <tr>
+                            <td>Emergía total (iluminação noturna)</td>
+                            <td>475 bilhões sej/mês</td>
+                            <td>160 bilhões sej/mês</td>
+                        </tr>
+                        <tr>
+                            <td>Redução de custo com energia</td>
+                            <td>-</td>
+                            <td>~65% de economia</td>
+                        </tr>
+                        <tr>
+                            <td>Emissões de CO₂ (indiretas)</td>
+                            <td>Alta</td>
+                            <td>Reduzida em 50-70%</td>
+                        </tr>
+                    </table>
+                    </div>
                 </article>
+
 
             </main>
         </section>
@@ -66,11 +220,11 @@
                         <div class="footer-section">
                             <h3>Integrantes</h3>
                             <ul class="footer-links">
-                                <li><p>Felipe Matias Maximiano da Silva</p></li>
-                                <li><p>Henrique Nascimento de Souza</p></li>
-                                <li><p>Giovanna Alcantara do Nascimento</p></li>
-                                <li><p>Kauan Eron Carneiro Araujo</p></li>
-                                <li><p>Matheus de Souza Lima Costa</p></li>
+                                <li><p>Felipe Matias Maximiano da Silva - web developer</p></li>
+                                <li><p>Henrique Nascimento de Souza - author</p></li>
+                                <li><p>Giovanna Alcantara do Nascimento - co-author</p></li>
+                                <li><p>Kauan Eron Carneiro Araujo - co-author</p></li>
+                                <li><p>Matheus de Souza Lima Costa - co-author</p></li>
                             </ul>
                         </div>
                     </div>
@@ -78,25 +232,30 @@
                         <div class="footer-section">
                             <h3>Links Rápidos</h3>
                             <ul class="footer-links">
-                                <li><a href="#">Início</a></li>
-                                <li><a href="#">Como Funciona</a></li>
-                                <li><a href="#">Tópico 1</a></li>
-                                <li><a href="#">Tópico 2</a></li>
+                                <li><a href="/index.html">Início</a></li>
+                                <li><a href="#conceito">O Que É Emergia?</a></li>
+                                <li><a href="/_pages/campus.html">Emergia no Campus UNIP</a></li>
                             </ul>
                         </div>
                         <div class="footer-section">
                             <h3>Contato</h3>
                             <ul class="footer-links">
-                                <li><a href="#">a</a></li>
-                                <li><a href="#">a</a></li>
-                                <li><a href="#">a</a></li>
-                                <li><a href="#">a</a></li>
+                                <li><a href="" class="link-footer">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                                    </svg>
+                                    fmatias.ctt@gmail.com</a>
                             </ul>
                         </div>
                     </div>
                 </div>
             </section>
         </footer>
+        <footer class="footer2">
+        <div>
+            ©2025 Copyright - All Rights Reserved
+        </div>
+    </footer>
     </div>
 </body>
     <script src="/_js/mobile-navbar.js"></script>
