--- a/_pages/emergia.html
+++ b/_pages/emergia.html
@@ -19,8 +19,8 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="/index.html">Início</a></li>
-                    <li><a href="/_pages/home.html">Conceito</a></li>
-                    <li><a href="#">Aplicação</a></li>
+                    <li><a href="/_pages/emergia.html">Conceito</a></li>
+                    <li><a href="/_pages/campus.html">UNIP</a></li>
                 </ul>
             </nav>
         </div>
@@ -84,6 +84,7 @@
                     <br>
                     <h3>Exemplo 1: Copo de Suco de Laranja (200 mL)</h3>
 
+                    <div class="table-responsive">
                     <table>
                         <tr>
                             <th>Item</th>
@@ -122,6 +123,7 @@
                             <td>570.000 sej</td>
                         </tr>
                     </table>
+                    </div>
 
                     <h3>Emergia = Quantidade x Transformidade</h3>
                     <h3>Total = Emergia 1 + Emergia 2 + Emergia 3 + Emergia 4</h3><br>
@@ -130,6 +132,7 @@
                     <br>
                     <h3>Exemplo 2: 1 kg de Tomate Convencional</h3>
 
+                    <div class="table-responsive">
                     <table>
                         <tr>
                             <th>Entrada</th>
@@ -174,6 +177,7 @@
                             <td>8.550.000 sej</td>
                         </tr>
                     </table>
+                    </div>
 
                     <p>Esse número representa toda a energia solar equivalente utilizada na produção de 1 kg de tomate, do campo até o mercado.</p>
                 </article>
@@ -197,11 +201,11 @@
                         <div class="footer-section">
                             <h3>Integrantes</h3>
                             <ul class="footer-links">
-                                <li><p>Felipe Matias Maximiano da Silva</p></li>
-                                <li><p>Henrique Nascimento de Souza</p></li>
-                                <li><p>Giovanna Alcantara do Nascimento</p></li>
-                                <li><p>Kauan Eron Carneiro Araujo</p></li>
-                                <li><p>Matheus de Souza Lima Costa</p></li>
+                                <li><p>Felipe Matias Maximiano da Silva - web developer</p></li>
+                                <li><p>Henrique Nascimento de Souza - author</p></li>
+                                <li><p>Giovanna Alcantara do Nascimento - co-author</p></li>
+                                <li><p>Kauan Eron Carneiro Araujo - co-author</p></li>
+                                <li><p>Matheus de Souza Lima Costa - co-author</p></li>
                             </ul>
                         </div>
                     </div>
@@ -217,10 +221,11 @@
                         <div class="footer-section">
                             <h3>Contato</h3>
                             <ul class="footer-links">
-                                <li><a href="#">a</a></li>
-                                <li><a href="#">a</a></li>
-                                <li><a href="#">a</a></li>
-                                <li><a href="#">a</a></li>
+                                <li><a href="" class="link-footer">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                                    </svg>
+                                    fmatias.ctt@gmail.com</a>
                             </ul>
                         </div>
                     </div>
