--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header class="header">
         <div class="header-container">
             <nav>
+                <a class="titulo">Emergia</a>
                 <div class="mobile-menu">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -18,7 +19,7 @@
                 <ul class="nav-list">
                     <li><a href="#">Início</a></li>
                     <li><a href="/_pages/emergia.html">Conceito</a></li>
-                    <li><a href="#">Aplicação</a></li>
+                    <li><a href="/_pages/campus.html">UNIP</a></li>
                 </ul>
             </nav>
         </div>
