final commit (maybe)

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/_css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>APS Emergia</title>
 </head>
 <body>
     <header class="header">
         <div class="header-container">
             <nav>
-                <a class="titulo">Emergia</a>
+                <a href="index.html" class="titulo">Emergia</a>
                 <div class="mobile-menu">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -18,14 +18,14 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="#">Início</a></li>
-                    <li><a href="/_pages/emergia.html">Conceito</a></li>
-                    <li><a href="/_pages/campus.html">UNIP</a></li>
+                    <li><a href="pages/emergia.html">Conceito</a></li>
+                    <li><a href="pages/campus.html">UNIP</a></li>
                 </ul>
             </nav>
         </div>
      </header>
 
-     <img src="/_imagens/hero.jpg" alt="imagem emergica" class="main-content">
+     <img src="imagens/hero.jpg" alt="imagem emergica" class="main-content">
         <div class="main-wrapper">
             <div class="main-block">
                 <h1>APS Emergia</h1>
@@ -47,7 +47,7 @@
                     <li>Trabalho humano (tempo, esforço)</li>
                     <li>Equipamentos, transporte e manutenção</li></p>
                     <div class="main-button">
-                        <a href="/_pages/emergia.html">Ver mais.</a>
+                        <a href="pages/emergia.html">Ver mais.</a>
                     </div>
                 </div>
                 <div class="block">
@@ -55,7 +55,7 @@
                     <p>Você já imaginou quanta energia a natureza gasta para manter o dia a dia de um campus universitário? Da água usada nos jardins ao almoço servido no refeitório, tudo consome energia.
                     É aí que entra a emergia: uma ferramenta que mede toda a energia (visível e invisível) envolvida na produção de bens, serviços e atividades, convertendo tudo em uma única unidade.</p>
                     <div class="main-button2">
-                        <a href="/_pages/campus.html">Ver mais.</a>
+                        <a href="pages/campus.html">Ver mais.</a>
                     </div>
                 </div>
             </div>
@@ -68,5 +68,5 @@
         </div>
     </footer>
 </body>
-<script src="/_js/mobile-navbar.js"></script>
+<script src="js/mobile-navbar.js"></script>
 </html>
