--- a/pages/campus.html
+++ b/pages/campus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/_css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>APS Emergia</title>
 </head>
 <body>
@@ -11,22 +11,22 @@
      <header class="header">
         <div class="header-container">
             <nav>
-                <a class="titulo">Emergia</a>
+                <a href="../index.html" class="titulo">Emergia</a>
                 <div class="mobile-menu">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="/index.html">Início</a></li>
-                    <li><a href="/_pages/emergia.html">Conceito</a></li>
-                    <li><a href="/_pages/campus.html">UNIP</a></li>
+                    <li><a href="../index.html">Início</a></li>
+                    <li><a href="emergia.html">Conceito</a></li>
+                    <li><a href="campus.html">UNIP</a></li>
                 </ul>
             </nav>
         </div>
      </header>
     <!-- Hero -->
-    <img class="cover" src="/_imagens/hero.jpg" alt="floresta_hero">
+    <img class="cover" src="../imagens/hero.jpg" alt="floresta_hero">
     
     <div class="container">
         <section class="bloco">
@@ -232,15 +232,15 @@
                         <div class="footer-section">
                             <h3>Links Rápidos</h3>
                             <ul class="footer-links">
-                                <li><a href="/index.html">Início</a></li>
-                                <li><a href="#conceito">O Que É Emergia?</a></li>
-                                <li><a href="/_pages/campus.html">Emergia no Campus UNIP</a></li>
+                                <li><a href="../index.html">Início</a></li>
+                                <li><a href="emergia.html">O Que É Emergia?</a></li>
+                                <li><a href="campus.html">Emergia no Campus UNIP</a></li>
                             </ul>
                         </div>
                         <div class="footer-section">
                             <h3>Contato</h3>
                             <ul class="footer-links">
-                                <li><a href="" class="link-footer">
+                                <li><a href="mailto:fmatias.ctt@gmail.com" class="link-footer">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                     </svg>
@@ -258,6 +258,6 @@
     </footer>
     </div>
 </body>
-    <script src="/_js/mobile-navbar.js"></script>
-    <script src="/_js/script.js"></script>
+    <script src="../js/mobile-navbar.js"></script>
+    <script src="../js/script.js"></script>
 </html>
