--- a/pages/emergia.html
+++ b/pages/emergia.html
@@ -201,11 +201,11 @@
                         <div class="footer-section">
                             <h3>Integrantes</h3>
                             <ul class="footer-links">
-                                <li><p>Felipe Matias Maximiano da Silva - web developer</p></li>
-                                <li><p>Henrique Nascimento de Souza - author</p></li>
-                                <li><p>Giovanna Alcantara do Nascimento - co-author</p></li>
-                                <li><p>Kauan Eron Carneiro Araujo - co-author</p></li>
-                                <li><p>Matheus de Souza Lima Costa - co-author</p></li>
+                                <li><p>Felipe Maximiano - web developer</p></li>
+                                <li><p>Henrique Souza - author</p></li>
+                                <li><p>Giovanna Nascimento - co-author</p></li>
+                                <li><p>Kauan Araujo - co-author</p></li>
+                                <li><p>Matheus Costa - co-author</p></li>
                             </ul>
                         </div>
                     </div>
