--- a/pages/campus.html
+++ b/pages/campus.html
@@ -184,27 +184,27 @@
                         <tr>
                             <th>Indicador</th>
                             <th>Antes</th>
-                            <th>Após 6 meses</th>
+                            <th>Depois</th>
                         </tr>
                         <tr>
                             <td>Consumo de energia noturna</td>
-                            <td>100.000 kWh/mês</td>
-                            <td>35.000 kWh/mês</td>
+                            <td>4.500 kWh/mês</td>
+                            <td>750 kWh/mês</td>
                         </tr>
                         <tr>
                             <td>Emergía total (iluminação noturna)</td>
-                            <td>475 bilhões sej/mês</td>
-                            <td>160 bilhões sej/mês</td>
+                            <td>9 × 10⁹ sej</td>
+                            <td>1,5 × 10⁹ sej</td>
                         </tr>
                         <tr>
                             <td>Redução de custo com energia</td>
                             <td>-</td>
-                            <td>~65% de economia</td>
+                            <td>~83,33% de economia</td>
                         </tr>
                         <tr>
                             <td>Emissões de CO₂ (indiretas)</td>
                             <td>Alta</td>
-                            <td>Reduzida em 50-70%</td>
+                            <td>Reduzida Significativamente</td>
                         </tr>
                     </table>
                     </div>
