--- a/pages/campus.html
+++ b/pages/campus.html
@@ -34,7 +34,7 @@
                 <header>
                     <h3>Neste Artigo</h3>
                 </header>
-                <ul class="navlateral-list">
+                <ul class="navlateral-list" >
                     <li><a href="#emergia-unip" class="a-style2">Emergia no Campus UNIP</a></li>
                     <li><a href="#como-aplicar" class="a-style2">Como Aplicar no Campus?</a></li>
                     </a></li>
@@ -42,6 +42,7 @@
             </aside>
             <main>
                 <article class="topicos">
+                    <img src="../imagens/energia-eolica.png" class="banner" alt="banner">
                     <h2 class="titulo-section" id="emergia-unip">Emergia no Campus UNIP</h1> <hr>
                     <p>Você sabia que é possível medir toda a energia, visível e invisível, envolvida nas atividades diárias do campus? Desde o preparo de um almoço no refeitório até o funcionamento das salas de aula, tudo consome recursos naturais. A emergia nos ajuda a identificar oportunidades de melhoria e promover ações mais sustentáveis dentro do campus. <br>
                     A transição para uma universidade mais ecológica passa pelo uso consciente dos recursos e pela mensuração eficiente do impacto ambiental das suas operações. Uma das formas mais robustas de fazer isso é através da <strong>avaliação de emergia</strong>, um método desenvolvido por <strong>Howard T. Odum</strong>, que calcula o custo energético total de qualquer sistema, considerando tanto os insumos visíveis (como eletricidade) quanto os invisíveis (como esforço humano, materiais e energia da natureza).
@@ -220,11 +221,11 @@
                         <div class="footer-section">
                             <h3>Integrantes</h3>
                             <ul class="footer-links">
-                                <li><p>Felipe Maximiano - web developer</p></li>
-                                <li><p>Henrique Souza - author</p></li>
-                                <li><p>Giovanna Nascimento - co-author</p></li>
-                                <li><p>Kauan Araujo - co-author</p></li>
-                                <li><p>Matheus Costa - co-author</p></li>
+                                <li><p>Felipe Maximiano</p></li>
+                                <li><p>Henrique Souza</p></li>
+                                <li><p>Giovanna Nascimento</p></li>
+                                <li><p>Kauan Araujo</p></li>
+                                <li><p>Matheus Costa</p></li>
                             </ul>
                         </div>
                     </div>
