--- a/pages/emergia.html
+++ b/pages/emergia.html
@@ -48,6 +48,7 @@
                     <div class=""></div>
                     <p>A <b>Emergia</b> é um conceito criado pelo ecólogo americano Howard T. Odum para medir toda a energia necessária para gerar um produto ou serviço, incluindo a energia natural e humana. Ela vai além da energia visível, como eletricidade ou combustível. A emergia considera: A luz do sol que alimenta as plantas, a água da chuva que irriga as lavouras, o solo fértil que sustenta o cultivo, o tempo e o esforço humano, as máquinas, os fertilizantes, o transporte, etc. Tudo isso é somado e convertido em emjoules solares (sej) – uma unidade comum baseada na energia do sol, pois é a fonte de energia primária de todos os sistemas da Terra.
                     </p>
+                    <img src="../imagens/Emergy.jpg" alt="exemplo de emergia" class="img">
                 </article>
 
                 <article class="topicos">
@@ -59,6 +60,7 @@
 
                 <article class="topicos">
                     <h2 class="titulo-section" id="como-calcular">Como Calcular a Emergia</h2><hr>
+                    
                     <p>Você não precisa ser cientista para entender o cálculo da emergia. Veja como funciona de maneira prática:</p>
 
                     <p class="lista"><strong>1. Liste tudo o que foi usado no processo</strong></p>
@@ -201,11 +203,11 @@
                         <div class="footer-section">
                             <h3>Integrantes</h3>
                             <ul class="footer-links">
-                                <li><p>Felipe Maximiano - web developer</p></li>
-                                <li><p>Henrique Souza - author</p></li>
-                                <li><p>Giovanna Nascimento - co-author</p></li>
-                                <li><p>Kauan Araujo - co-author</p></li>
-                                <li><p>Matheus Costa - co-author</p></li>
+                                <li><p>Felipe Maximiano</p></li>
+                                <li><p>Henrique Souza</p></li>
+                                <li><p>Giovanna Nascimento</p></li>
+                                <li><p>Kauan Araujo</p></li>
+                                <li><p>Matheus Costa</p></li>
                             </ul>
                         </div>
                     </div>
